# kvdynamodb-provider

./: Cargo.toml  Makefile  README.md  docker-compose.yml  provider_test_config.toml
src/: config.rs  lib.rs  main.rs
tests/: kvdynamodb_provider_test.rs
