[package]
name = "kvdynamodb-provider"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
async-trait = "0.1"
aws-config = "0.7.0"
aws-sdk-dynamodb = "0.7.0"
aws-types = { version = "0.7.0", features=["hardcoded-credentials"] }
base64 = "0.13"
chrono = "0.4"
futures = "0.3"
log = "0.4"
kvdynamodb = { path="../kvdynamodb/rust" }
serde_json = "1.0"
serde = {version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
wasmbus-rpc = "0.8.2"

# test dependencies
[dev-dependencies]
wasmcloud-test-util = "0.3.1"
tokio = { version = "1.0", features = [ "full" ] }

[[bin]]
name = "kvdynamodb_provider"
path = "src/main.rs"

[lib]
name = "kvdynamodb_lib"
path = "src/lib.rs"
